Supports build project by JDK 17 (#2081)
* Bump lombok to 1.18.24

* Bump jacoco-maven-plugin to 0.8.8

* Unit tests adapt JDK 17

* Add profile for JDK 11+ and add open modules